add img, modify components

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,5 @@
 .root {
-    background: #202736;
-    background-attachment: fixed;
+    background: #202736 fixed;
     background-size: cover;
     position: relative;
     min-height: 100vh;
@@ -11,8 +10,7 @@
 .root::before {
     content: '';
     position: fixed;
-    background: url(<--ТУТ ДОЛЖЕН БЫТЬ ПУТЬ ДО Starts.svg -->);
-    background-attachment: fixed;
+    background: url(../assets/Stars.svg) fixed;
     width: 100%;
     min-height: 100vh;
     z-index: -1;
@@ -34,7 +32,7 @@
     position: absolute;
     bottom: -300px;
     left: 0;
-    background: url(<--ТУТ ДОЛЖЕН БЫТЬ ПУТЬ ДО Trees.svg -->) bottom left repeat-x;
+    background: url(../assets/Trees.svg) bottom left repeat-x;
     background-size: cover;
     width: 100%;
     height: 80%;
